--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Technical Documentation Page</title>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="index.css">
 </head>
 	<body>
 		<nav id="navbar">
